corrected grid gap

--- a/src/styles.css
+++ b/src/styles.css
@@ -12,6 +12,7 @@ section {
 .grid {
   display: grid;
   grid-template-columns: 1fr 2fr 2fr;
+  grid-gap: 24px;
 }
 header h1 {
   font-size: 96px;
@@ -87,7 +88,6 @@ footer p {
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
-  margin-right: 20px;
 }
 @media (max-width: 960px) {
   header {
